ALS-11788: Upgrade to java 25 (#107)