@@ -21,7 +21,7 @@
 		</repository>
 	</repositories>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>25</java.version>
 		<spotless.version>2.41.1</spotless.version>
 	</properties>
 	<dependencies>
@@ -113,6 +113,14 @@
 						</eclipse>
 						<toggleOffOn />
 					</java>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.6</version> <!-- Use latest version -->
+				<configuration>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
